try to change 202209151105

--- a/python1.ipynb
+++ b/python1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04c06a83",
+   "id": "eae21985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1207e9c4",
+   "id": "5fdd75da",
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "7d84342d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "007983fb",
+   "id": "e575b56e",
    "metadata": {},
    "outputs": [],
    "source": []
