--- a/py_02.ipynb
+++ b/py_02.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6b12071a",
+   "id": "021b59e7",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb3733f8",
+   "id": "0c2bbb66",
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,51 @@
     "date2 = date(2019, 2, 25)\n",
     "print(numOfDays(date1, date2), \"days\")\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ea6d84c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入償還本金:1000000\n",
+      "請輸入日利率：0.0005\n",
+      "給付本金： 1000000 元\n",
+      "給付利息： 29932 元\n",
+      "給付罰金： 300 元\n",
+      "\n",
+      "總償還金額： 1030232 元\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "fund = int(input('請輸入償還本金:'))\n",
+    "d_rate = float(input('請輸入日利率：'))\n",
+    "\n",
+    "s_day = date(2006,1,19)\n",
+    "e_day = date(2006,3,19)\n",
+    "\n",
+    "#print((e_day - s_day).days)\n",
+    "d_days = (e_day - s_day).days\n",
+    "f_int = round( fund * (1+d_rate)**int(d_days) - fund)\n",
+    "\n",
+    "#print(e_day.month - s_day.month)\n",
+    "if e_day.day > s_day.day:\n",
+    "    d_mons = e_day.month - s_day.month +1\n",
+    "else:\n",
+    "    d_mons = e_day.month - s_day.month\n",
+    "\n",
+    "#delay fee 是150/月，最大值900\n",
+    "    f_fee = 150 * d_mons\n",
+    "print('給付本金：',fund,'元\\n給付利息：', f_int,'元\\n給付罰金：', f_fee,'元\\n')\n",
+    "print('總償還金額：',fund+f_int+f_fee,'元')\n",
+    "\n"
    ]
   }
  ],
