--- a/py_02.ipynb
+++ b/py_02.ipynb
@@ -44,37 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0c2bbb66",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74 days\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''做為參考使用的時間差計算方式\n",
-    "# Python3 program to find number of days\n",
-    "# between two given dates\n",
-    "from datetime import date\n",
-    " \n",
-    "def numOfDays(date1, date2):\n",
-    "    return (date2-date1).days\n",
-    "     \n",
-    "# Driver program\n",
-    "date1 = date(2018, 12, 13)\n",
-    "date2 = date(2019, 2, 25)\n",
-    "print(numOfDays(date1, date2), \"days\")\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "id": "ea6d84c8",
    "metadata": {},
    "outputs": [
@@ -82,39 +52,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入償還本金:1000000\n",
+      "請輸入償還本金:11805\n",
       "請輸入日利率：0.0005\n",
-      "給付本金： 1000000 元\n",
-      "給付利息： 29932 元\n",
+      "請輸入應還款日期(三位數民國年)\n",
+      "(格式：YYYMMDD):0950119\n",
+      "請輸入實際還款日期(三位數民國年)\n",
+      "(格式：YYYMMDD):0950319\n",
+      "給付本金： 11805 元\n",
+      "給付利息： 353 元\n",
       "給付罰金： 300 元\n",
       "\n",
-      "總償還金額： 1030232 元\n"
+      "總償還金額： 12458 元\n"
      ]
     }
    ],
    "source": [
+    "#允許使用者輸入償還本金、利率、應還款及實際還款日期的版本\n",
     "from datetime import date\n",
     "fund = int(input('請輸入償還本金:'))\n",
     "d_rate = float(input('請輸入日利率：'))\n",
     "\n",
-    "s_day = date(2006,1,19)\n",
-    "e_day = date(2006,3,19)\n",
+    "s_day_set = input('請輸入應還款日期(三位數民國年)\\n(格式：YYYMMDD):')\n",
+    "e_day_set = input('請輸入實際還款日期(三位數民國年)\\n(格式：YYYMMDD):')\n",
     "\n",
-    "#print((e_day - s_day).days)\n",
+    "s_day = date(int(s_day_set[0:3])+1911,int(s_day_set[3:5]),int(s_day_set[5:]))\n",
+    "e_day = date(int(e_day_set[0:3])+1911,int(e_day_set[3:5]),int(e_day_set[5:]))\n",
+    "\n",
     "d_days = (e_day - s_day).days\n",
     "f_int = round( fund * (1+d_rate)**int(d_days) - fund)\n",
     "\n",
-    "#print(e_day.month - s_day.month)\n",
     "if e_day.day > s_day.day:\n",
-    "    d_mons = e_day.month - s_day.month +1\n",
+    "    d_mons = (e_day.year - s_day.year)*12 + (e_day.month - s_day.month) +1\n",
     "else:\n",
-    "    d_mons = e_day.month - s_day.month\n",
+    "    d_mons = (e_day.year - s_day.year)*12 + (e_day.month - s_day.month)\n",
     "\n",
     "#delay fee 是150/月，最大值900\n",
-    "    f_fee = 150 * d_mons\n",
+    "f_fee = min( 150 * d_mons , 900)\n",
     "print('給付本金：',fund,'元\\n給付利息：', f_int,'元\\n給付罰金：', f_fee,'元\\n')\n",
-    "print('總償還金額：',fund+f_int+f_fee,'元')\n",
-    "\n"
+    "print('總償還金額：',fund+f_int+f_fee,'元')"
    ]
   }
  ],
